Bug 1147942 - Don't warn when aborting finished IndexedDB transactions, r=janv.

--HG--
extra : rebase_source : a356e820641dade176d862c6ab2b226a76abad64